# pepper_virtual

./: README.md
pepper_control/config/: pepper_position_control.yaml  pepper_trajectory_control.yaml
pepper_control/launch/: pepper_control_position.launch  pepper_control_trajectory.launch  pepper_control_trajectory_all.launch
pepper_gazebo_plugin/: CMakeLists.txt  README.rst  package.xml
pepper_gazebo_plugin/config/: pepper.rviz  pepper_gazebo_dashboard.perspective
pepper_gazebo_plugin/include/pepper_gazebo_plugin/: disable_link_plugin.h  gazebo_ros_force_omni_base.h  mimic_joint_plugin.h
pepper_gazebo_plugin/launch/: pepper_gazebo.launch  pepper_gazebo_plugin_Y20.launch  pepper_gazebo_plugin_Y20_CPU.launch  pepper_gazebo_plugin_in_office.launch  pepper_gazebo_plugin_in_office_CPU.launch  pepper_gazebo_plugin_in_tiago_world.launch  test.launch
pepper_gazebo_plugin/scripts/: arms_down.sh  laser_publisher.py  pcl_checker.py  test_laser_scan_merger.py
pepper_gazebo_plugin/src/: disable_link_plugin.cpp  gazebo_ros_force_omni_base.cpp  mimic_joint_plugin.cpp
pepper_gazebo_plugin/worlds/: cafe.world  conposter.world
