<?xml version="1.0"?>
<package>
  <name>pepper_gazebo_plugin</name>
  <version>0.0.4</version>
  <description>Gazebo plugin for Pepper robot</description>

  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>
  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>

  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/ros-naoqi/pepper_virtual/issues</url>
  <url type="repository">https://github.com/ros-naoqi/pepper_virtual.git</url>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>pepper_description</build_depend>



  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>control_toolbox</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pepper_control</run_depend>
  <run_depend>pepper_description</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>control_toolbox</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
